kubernetes/movieapp-ui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-app-ui-deploy
  labels:
    app: movie-app-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      name: movie-app-ui
      app: frontend
  template:
    metadata:
      labels:
        name: movie-app-ui
        app: frontend
    spec:
      containers:
      - name: movie-app-ui
        image: containers.cisco.com/hesiriki/movie-app-ui:latest
