kubernetes/movieapp-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: movieapp-ui-svc
  labels:
    name: movieapp-ui-svc
    app: frontend
spec:
  type: NodePort
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30004
  selector:
    name: movie-app-ui
    app: frontend
