kubernetes/movieapp-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: movie-app-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: movieapp-ui-svc
            servicePort: 8081
